# Pangu-Weather

./: LICENSE.txt  pyproject.toml  requirements_gpu.txt
.devcontainer/: Dockerfile  devcontainer.json  start.sh
docker/: Dockerfile  build.sh
ngc/: .dockerignore  Dockerfile  job.json  job.sh  submit.sh
pangu/: evaluate_2018.py  evaluate_2018_dev.py  extract_VDS_for_inference.py  extract_VDS_for_inference_dev.py  inference_gpu.py  panguweather_dev.code-workspace  test.py  test_cluster.py  test_xarray_merge.py
pangu/evaluation/: checkout_data_sample.py  evaluate_2018.py  loss.py  test.py  test_loss.py
scripts/: env.env  load_env.sh  placeholder.env
scripts/run_inference/: launch_draco_checkout_data_2018.sh  launch_draco_evaluation_2018.sh  launch_draco_extraction_data_2018.sh  launch_draco_inference_pangu_2018.sh
